sfstreets coming soon

--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -2,244 +2,11 @@
 title: San Francisco Streets
 description: walking through every sf neighborhood in one day
 image: sfstreets.png
-date: 2024-05-16
+date: 2024-08-25
 slug: /blog/sfstreets
 category: experiments
 ---
 
-v1.0, 2024
-
-![sfstreets-map](/img/sfstreets/sfstreets.png)
-
 > **🚧 This document is a work in progress.**
 
-## Introduction
-The San Francisco Streets Project aims to answer one question: **Is it possible to walk through every major neighborhood in San Francisco in one day?**
-
-SF is a very unique city, given its shape as a 7-mile-by-7-mile square surrounded on three sides by water. It may well be the only large city in the United States in which this is possible.
-
-This draft is a first attempt at a solution. The route starts off at the Bayshore Caltrain Station at 9am and ends it off walking along Ocean Beach at sunset, before we loop back to the BART line.
-
-> **Anyone is welcome to join for any segment of the journey!**
->
-> The inaugural SFS tour will take place in early July. <br/><br/>
->
-> If you're interested in being involved, [contact me](https://bencuan.me/contact) and include your phone number so I can add you to a WhatsApp group with live location sharing. You can meet us at any point in the day :)
-
-### A birds-eye view
-
-**11-12 hours total**: Target arrival at Bayshore ~9am, arrival to Ocean Beach ~8:30pm (sunset time in early june)
- - The northbound Caltrain gets into Bayshore at 8:44am.
-
-**6 main walking segments**
-  - 6.5 hours to walk 16 miles (25 minute pace, casual walking)
-  - 3-4 hours of breaks for food and sightseeing
-  
-**5 transit segments**
- - 20 mins on BART
- - 20 mins on the T Line
- - 20 mins on the K Line
- - 50 mins on the 38R (in 2 parts)
- 
-**1 rideshare segment**
- - 15 minutes
-
-### Neighborhood list
-
-**This route traverses the following neighborhoods in order:**
-
-**Part 1**
-
-1. Bayshore
-2. Sunnydale
-3. Visitacion Valley
-4. Excelsior
-5. Portola
-6. Bayview
-7. Hunters Point
-
-**Part 2**
-
-8. Dogpatch
-9. Mission Bay
-10. Potrero Hill
-11. Mission District
-
-**Part 3**
-
-12. Glen Park
-13. Twin Peaks
-14. Noe Valley
-15. Eureka Valley
-16. The Castro
-17. Duboce Triangle
-18. The Haight
-19. Hayes Valley
-20. Fillmore District
-21. Civic Center
-22. Nob Hill
-23. Tenderloin
-24. Union Square
-
-**Part 4**
-
-25. SoMa
-26. Financial District
-27. The Embarcadero
-28. Chinatown
-29. North Beach
-30. Russian Hill
-
-**Part 5**
-
-31. Fort Mason
-32. Marina District
-33. Pacific Heights
-34. Japantown
-35. Richmond District
-
-**Part 6**
-
-36. Outer Richmond
-37. Sutro Heights
-38. Golden Gate Park
-39. Outer Sunset
-40. West Portal
-41. Balboa Park
-
-## Route Details
-
-### Part 1: Sunnydale/Visitacion Valley/Excelsior/Portola
-
-1.25 hour walk, 3 miles.
- - **Start:** Bayshore Caltrain Station @ 9:00am
- - **End:** Gilman/Paul Station (T Line) @ 10:30am
- - includes a coffee stop at [Mission Blue](https://missionbluesf.com/).
-
-[map](https://maps.app.goo.gl/zsjPertXnsh2P2ZW7)
-![sfstreets-map](/img/sfstreets/map-1.png)
-
-
-### Part 1.5: Bayview/Hunters Point
-
-15-minute T ride from Gilman/Paul to 20th Street.
-
-[map](https://maps.app.goo.gl/rkUoyZKocGsaLJeWA)
-![sfstreets-map](/img/sfstreets/map-1-5.png)
-
-
-### Part 2: Dogpatch/Mission Bay/Potrero Hill/Mission
-
-1 hour walk, 1 hour break, 2.25 miles.
- - **Start:** 20th St x 3rd St @ 10:45am
- - **End:** 16th St/Mission BART Station @ 12:45pm
- - Lunch stop in Potrero Hill; there are several good options here.
- - Includes a pass by [Tartine](https://tartinebakery.com/) to grab some of the best baked goods in the city.
- 
-[map](https://maps.app.goo.gl/mecK7wMBqhE4RzTm9)
-![sfstreets-map](/img/sfstreets/map-2.png)
-
-### Part 2.5: BART from 16th/Mission to Glen Park
-
-A brief 5-minute southbound hop on BART.
-
-[map](https://maps.app.goo.gl/6uRLU3webfZgM6uL6)
-![sfstreets-map](/img/sfstreets/map-2-5.png)
-
-
-### Part 3: Glen Park / Noe Valley / Twin Peaks / Castro / The Haight / Fillmore /  Hayes Valley / Civic Center / Tenderloin / Nob Hill
-
-2 hours, 5 miles of walking. This is the longest stretch!
- - **Start:** Glen Park BART Station @ 1:00pm
- - **End:** Van Ness x Geary @ 3:00pm
- - Some stops at the Painted Ladies and City Hall for some sightseeing.
-
-[map](https://maps.app.goo.gl/RKVcyjwEwtQfEK3r8)
-![sfstreets-map](/img/sfstreets/map-3.png)
-
-### Part 3.5: Van Ness to Embarcardero via 38R
-
-20 minute bus ride through the Tenderloin, Nob Hill, and Union Square along Geary and Market Streets.
-
-[map](https://maps.app.goo.gl/pyWyFac3JAFK9GMF7)
-![sfstreets-map](/img/sfstreets/map-3-5.png)
-
-
-### Part 4: SoMa/FiDi/Embarcadero/Chinatown/North Beach/Fort Mason
-
-1 hour, 2.3 miles of walking.
- - **Start:** Embarcadero BART Station @ 3:30pm
- - **End:** Fort Mason @ 4:30pm
- - Passes by the Ferry Building.
- - Optional stops for snacks and drinks. There are some fantastic bakeries/delis all over North Beach.
- - Ice cream at Ghirardelli Square 🥺🍨
- 
-[map](https://maps.app.goo.gl/pEk6EsVodBp4UjZo9)
-![sfstreets-map](/img/sfstreets/map-4.png)
-
-
-
-### Part 5: Fort Mason to Japantown via Fillmore / Pacific Heights
-
-1 hour leisurely walk over 2 miles, with a 1 hour dinner break at the end.
- - **Start:** Fort Mason @ 4:30pm
- - **End:** Japantown @ 6:30pm
- - Ogle at fancy mansions while gasping for breath going up the hill :)
- - Stop at Japantown for dinner.
-
-[map](https://maps.app.goo.gl/cn5T8wFg7a4HB1rG9)
-![sfstreets-map](/img/sfstreets/map-5.png)
-
-
-
-### Part 5.5: Japantown/Richmond to Lands End via Geary/38R
-
-30 minute bus ride (the 38R makes a reappearance!)
- - Off-topic, but I *really* want to see a subway finally get built under Geary Street within my lifetime. One can dream 🥲
-
-[map](https://maps.app.goo.gl/7F5zBoDxphaLYVcP7)
-![sfstreets-map](/img/sfstreets/map-5-5.png)
-
-
-### Part 6: Richmond to Sunset via GGP/Great Hwy
-
-45 minutes, 1.5 miles. A super chill final stroll down the beach.
- - **Start:** Lands' End @ 7pm
- - **End:** Judah x Ocean Beach @ 7:30pm
- - Hopefully the sun will start to set as we walk along this stretch! It will be super pretty.
-
-[map](https://maps.app.goo.gl/tpyurAyJXFVoU4Zm6)
-![sfstreets-map](/img/sfstreets/map-6.png)
-
-
-### Part 6.5: catch a waymo to west portal
-
-A nice 20 minute drive through the Sunset during sunset.
-![sfstreets-map](/img/sfstreets/map-6-5.png)
-
-
-
-### Part 6.75: West Portal to Balboa Park BART via K Line
-25 minutes. Easy access to BART/Muni to get home.
-![sfstreets-map](/img/sfstreets/map-6-7.png)
-
-
-## Alternative Routes
-SF has a *lot* of neighborhoods, and everyone has their own opinion on what counts, what they're called, and where the boundaries are. I think this route does a good job of touching all of the most well-known subdivisions- but if there is something major I missed, let me know and I'll tweak it for future iterations!
-
-An improved or alternate route could include the following smaller neighborhoods and prominent landmarks:
- - Ingleside/Outer Mission
-	 - Add a small loop around Balboa Park at the end. Very doable if running ahead of schedule.
- - Lakeshore (Lake Merced)/Parkmerced/SFSU/Stonestown
-	 - Could detour the rideshare down here first before going to West Portal to add ~20 mins.
- - Actual Twin Peaks
-	 - You'd need some legs of steel to do the Twin Peaks hike in the middle of a 15-mile walk, but it's on the route if you wish to attempt!
- - Coit Tower
-	 - Add a 20-minute extension to the middle of Part 4.
- - Fisherman's Wharf / Pier 39 / Ghirardelli Square
-	 - Add a 30-minute extension to the end of Part 4.
- - Palace of Fine Arts / Presidio / Golden Gate Bridge
-	 - They're deceptively far away. If you're up to rent a bike and do a loop up between Phases 4 and 5, that would probably work the best.
- - Actually going into SoMa (Oracle Park, Salesforce Park, etc)
-	 - Before getting off at Dogpatch in Part 1.5, keep going all the way to 4th and King. Walk to Moscone Center along 4th Street, then take the T back to Dogpatch.
-	 - Salesforce Park is a short walk from Embarcadero BART, and can be added as a loop before departing to Part 4.
+Coming soon...
