small content update

--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -40,7 +40,9 @@
 [Elton Pinto](https://www.eltonpinto.me) - 
 [James Weng](https://jamesweng.com) -
 [Owen Goebel](https://oagoebel.github.io) -
-[Tino Caer](https://tinocaer.com)
+[Tino Caer](https://tinocaer.com) -
+[Ishaan Dham](https://ishaandham.com/) -
+[Cameron Custer](https://camcuster.me)
 
 <br />
 
