--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -9,4 +9,4 @@ category: experiments
 
 > **🚧 This document is a work in progress.**
 
-Coming soon...
+[Click here](https://bencuan.substack.com/p/san-francisco-streets) to read this post on Substack! I will port it over here eventually...
