--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -8,6 +8,7 @@ import ContactCard from '../../components/contactCard.tsx';
 import '../../sass/about.scss';
 
 ## currently
+ - :art: ???
  - :turtle: building [turtlenet](https://tsh.sh)
  - :books: organizing [systemd.works](https://systemd.works)
  - :memo: [[/blog/foreword|writing...]]
