add sfstreets + big blog style improvement

--- a/src/content/recipes/noodles.mdx
+++ b/src/content/recipes/noodles.mdx
@@ -39,6 +39,6 @@ asian: true
 7. if saving some noodles for later, rinse the leftovers thoroughly with cold water.
 
 ## troubleshooting
-1. <FootnoteRef n='1' client:idle>bok choy, [chinese broccoli](https://en.wikipedia.org/wiki/Gai_lan), or their relatives are my go-to choice. basically anything green with leaves and some stalk will work well.</FootnoteRef>
-2. <FootnoteRef n='2' client:idle>for the most authentic dish, consider getting some [cha siu](https://en.wikipedia.org/wiki/Char_siu), [beef brisket stew](https://www.pressurecookrecipes.com/instant-pot-chinese-beef-stew/), or [roast duck](https://thewoksoflife.com/chinese-roast-duck/) from your local Cantonese deli. But really protein works.</FootnoteRef>
+<FootnoteRef n='1' client:idle>bok choy, [chinese broccoli](https://en.wikipedia.org/wiki/Gai_lan), or their relatives are my go-to choice. basically anything green with leaves and some stalk will work well.</FootnoteRef>
+<FootnoteRef n='2' client:idle>for the most authentic dish, consider getting some [cha siu](https://en.wikipedia.org/wiki/Char_siu), [beef brisket stew](https://www.pressurecookrecipes.com/instant-pot-chinese-beef-stew/), or [roast duck](https://thewoksoflife.com/chinese-roast-duck/) from your local Cantonese deli. But really any protein works.</FootnoteRef>
 
