--- a/src/content/recipes/popovers.mdx
+++ b/src/content/recipes/popovers.mdx
@@ -35,8 +35,8 @@ asian: false
 8. Bake for 18 minutes. Without opening the oven <Footnote n='2' client:idle />, decrease heat to 350 and bake for another 7 minutes.
 
 ## troubleshooting
-1. <FootnoteRef n='1' client:idle>Regular all-purpose flour is an acceptable substitution.</FootnoteRef>
-2. <FootnoteRef n='2' client:idle>DO NOT open the oven until you're ready to take it out. I did it once and they got very delated and sad :(</FootnoteRef>
+<FootnoteRef n='1' client:idle>Regular all-purpose flour is an acceptable substitution.</FootnoteRef>
+<FootnoteRef n='2' client:idle>DO NOT open the oven until you're ready to take it out. I did it once and they got very deflated and sad :(</FootnoteRef>
 
 ## pairings
  - dip in butter + cinnamon sugar before baking
