--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -444,7 +444,7 @@ Internal links are [[colophon|highlighted]].
 ### footnotes
 I don't like the standard digital footnote format that makes you jump to the end of the page and back just to view it. This method<Footnote n='1' client:idle /> is much better! 
 
-<FootnoteRef n='1' client:idle>1. Look, it's a footnote!</FootnoteRef>
+<FootnoteRef n='1' client:idle>Look, it's a footnote!</FootnoteRef>
 
 ## visitor interaction
 The only analytics I collect from my site are from explicit button presses, like the one on my homepage. There are no cookies, GDPR banners, or trackers-- I genuinely have no idea how many people come here and what they do, nor do I really care.
