fix robots.txt and slugs

--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -3,7 +3,7 @@ title: foreword
 description: it's time to do a thing
 image: opengraph/foreword.png
 date: 2024-03-13
-slug: /blog/foreword
+slug: foreword
 category: meta
 ---
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
