--- a/src/content/blog/hong-kong-eats.mdx
+++ b/src/content/blog/hong-kong-eats.mdx
@@ -3,7 +3,7 @@ title: hong kong eats
 description: a guide to cantonese food for hungry american tourists
 image: hong-kong-eats/36ed5551-97ba-4752-829b-f1a1bda8a24e_4032x1356.jpeg
 date: 2024-04-10
-slug: /blog/hkeats
+slug: hkeats
 category: travel
 ---
 
