--- a/src/content/blog/long-haul-flights.mdx
+++ b/src/content/blog/long-haul-flights.mdx
@@ -3,7 +3,7 @@ title: long haul flights
 description: a survival guide
 image: long-haul-flights/7a73cde6-0b44-4b3e-b1d4-8e7d7da1a6bd_1104x621.png
 date: 2024-06-19
-slug: /blog/flights
+slug: flights
 category: travel
 ---
 
