--- a/src/content/blog/sfstreets-route.mdx
+++ b/src/content/blog/sfstreets-route.mdx
@@ -3,7 +3,7 @@ title: sfstreets route v1
 description: walking through every sf neighborhood in one day
 image: sfstreets-route/sfstreets.png
 date: 2024-05-16
-slug: /blog/sfstreets/route1
+slug: sfstreets/route1
 category: experiments
 ---
 
