--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -3,7 +3,7 @@ title: San Francisco Streets
 description: one day, one city, 40 neighborhoods, 5000 words
 image: sfstreets-route/sfstreets.png
 date: 2024-08-25
-slug: /blog/sfstreets
+slug: sfstreets
 category: experiments
 ---
 
