--- a/src/content/blog/the-completeish-history-of-the-computer.mdx
+++ b/src/content/blog/the-completeish-history-of-the-computer.mdx
@@ -3,7 +3,7 @@ title: The Complete(ish) History of the Computer Keyboard
 description: from typewriters to r/mechmarket in 150 years flat
 image: the-completeish-history-of-the-computer/e2f20191-6b01-4b1a-8450-892fd9686af8_1600x1200.png
 date: 2024-07-10
-slug: /blog/keyboards
+slug: keyboards
 category: history
 ---
 
