--- a/src/content/blog/what-makes-humans-unique.mdx
+++ b/src/content/blog/what-makes-humans-unique.mdx
@@ -3,7 +3,7 @@ title: what makes humans unique?
 description: the science of philosophy, and the philosophy of science
 image: what-makes-humans-unique/3f8681bb-a709-470c-b88b-67079503c6b3_654x888.png
 date: 2024-04-26
-slug: /blog/humans
+slug: humans
 category: philosophy
 ---
 
