--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -1,7 +1,7 @@
 ---
 title: about
 description: about bencuan
-slug: /about
+slug: about
 ---
 
 import ContactCard from '../../components/contactCard.tsx';
