--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -1,7 +1,7 @@
 ---
 title: colophon
 description: how it's made™ bencuan.me edition
-slug: /colophon
+slug: colophon
 ---
 
 ## wait what's a colophon?
