add bluesky federated likes and comments

--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -3,6 +3,7 @@ title: colophon
 description: how it's made™ bencuan.me edition
 slug: colophon
 ---
+import Comments from '../../components/bluesky.tsx';
 
 ## wait what's a colophon?
 
@@ -474,3 +475,6 @@ This website has received a 100/100 on all categories of PageSpeed Insights:
 
 ![pagespeed insights](/img/colophon/pagespeed.png)
 
+---
+
+<Comments uri="https://bsky.app/profile/bencuan.me/post/3lhg3hcs76222" client:idle/>
