fix clubpenguin description

--- a/src/content/blog/club-penguin-is-kil.mdx
+++ b/src/content/blog/club-penguin-is-kil.mdx
@@ -1,6 +1,6 @@
 ---
 title: club penguin is kil
-description: the life, and death of a legendary childhood game
+description: the life and death of a legendary childhood game
 image: club-penguin-is-kil/8a38f192-e9a1-4965-9d51-1ca6ef380281_1000x591.png
 date: 2024-04-04
 slug: clubpenguin
