update the update

--- a/src/content/blog/websites.mdx
+++ b/src/content/blog/websites.mdx
@@ -10,4 +10,4 @@ import { MDLink } from '../../components/links.tsx';
 
 ![](/img/opengraph/websites.png)
 
-I'm giving a tech talk this Wednesday evening, April 9 at the <MDLink href="https://www.ocf.berkeley.edu">Open Computing Facility</MDLink>. More info will be posted here as we get closer! 
+I'm giving a tech talk this Wednesday evening, April 9 @ 8pm at the <MDLink href="https://www.ocf.berkeley.edu">Open Computing Facility</MDLink>. More info will be posted here as we get closer! 
