--- a/src/content/blog/the-future-of-bay-area-transit.mdx
+++ b/src/content/blog/the-future-of-bay-area-transit.mdx
@@ -18,45 +18,26 @@ To celebrate one of the most exciting years in recent Bay Area transit history, 
 
 ## table of contents
 
-  1. why should you (and i) care so much about this?
-
-  2. the story so far: an indirect, abbreviated attempt at history from a non-historian
-
-  3. what's new?
-
-    1. BART's fleet of the future
-
-    2. Caltrain electrification
-
-    3. L Taraval reconstruction
-
-  4. what's next?
-
-    1. BART's new fare gates
-
-    2. Self-driving cars
-
-    3. Muni signaling upgrades (i.e. no more floppy disks)
-
-    4. Geary Subway
-
-    5. SMART expansions
-
-    6. Second transbay tube
-
-    7. Caltrain's Downtown Extension
-
-    8. Silicon Valley BART extension
-
-    9. Caltrain grade separations
-
-    10. Central Subway Extension
-
-    11. CA High Speed Rail
-
-    12. Bay Area 2050
-
-  5. footnote: how we can help
+  1. **why should you (and i) care so much about this?**
+  2. **the story so far:** an indirect, abbreviated attempt at history from a non-historian
+  3. **what's new?**
+      - BART's fleet of the future
+      - Caltrain electrification
+      - L Taraval reconstruction
+  4. **what's next?**
+      - BART's new fare gates
+      - Self-driving cars
+      - Muni signaling upgrades (i.e. no more floppy disks)
+      - Geary Subway
+      - SMART expansions
+      - Second transbay tube
+      - Caltrain's Downtown Extension
+      - Silicon Valley BART extension
+      - Caltrain grade separations
+      - Central Subway Extension
+      - CA High Speed Rail
+      - Bay Area 2050
+  5. **footnote:** how we can help
 
 
 
@@ -281,7 +262,7 @@ Since the trams run in the center of the road, passengers had to cross two lanes
 
 ### BART's new fare gates
 
- _ **Optimism level: super high!**_
+ **Optimism level: super high!**
 
 ![](/img/the-future-of-bay-area-transit/a299b315-259c-4fe1-aec6-4e66c87779f9_1763x795.png)
 <Caption> the shiny new gates at Civic Center BART.</Caption>
@@ -294,7 +275,7 @@ The new gates [aren't perfect](https://sfstandard.com/2024/09/18/bart-evading-fa
 
 ### Self-driving cars?!
 
- _ **Optimism level: ???**_
+ **Optimism level: ???**
 
 ![](/img/the-future-of-bay-area-transit/16cb46c8-28a6-48b0-b1fe-565d74f164a2_2512x1150.png)
 
@@ -336,7 +317,7 @@ Personally, I'm garnering some reserved, and cautious, enthusiasm for the future
 
 ### Muni gets better signalling
 
- _ **Optimism level: high**_
+ **Optimism level: high**
 
 ![](/img/the-future-of-bay-area-transit/c7dcf64e-3156-4b2b-bd0d-df92054d2f96_1200x630.png)
 <Caption> The mess of an intersection at 4th and King, where two Muni rail lines and the Caltrain terminus intersect... ([source](https://www.reddit.com/r/sanfrancisco/comments/15sdyt9/4year_old_girl_in_a_stroller_killed_by_an_suv/))</Caption>
@@ -349,7 +330,7 @@ Muni currently predicts that the project will wrap up around [2034](https://www.
 
 ### The Geary Subway
 
- _ **Optimism level: cautious**_
+ **Optimism level: cautious**
 
 ![](/img/the-future-of-bay-area-transit/391b702f-b488-410c-84e3-fa569cc05ec3_1182x666.png)
 <Caption> A view of the current 38R bus lane.</Caption>
@@ -367,7 +348,7 @@ Will transit ever make it across the Golden Gate? It's possible-- though I'm ske
 
 ### SMART to Healdsburg
 
- _ **Optimism level: high**_
+ **Optimism level: high**
 
 ![](/img/the-future-of-bay-area-transit/cf5ff9a6-aab7-4a79-8bfd-a642361db7c1_373x812.png)
 
@@ -379,7 +360,7 @@ SMART hasn't come without criticism: train frequency is quite bad (30-minute pea
 
 ### A second transbay tube?
 
- _ **Optimism level: cautious**_
+ **Optimism level: cautious**
 
 ![](/img/the-future-of-bay-area-transit/824f9fde-b80c-47e2-bffa-fc8c4d9aca44_1696x1238.png)
 <Caption> ([source](https://www.bart.gov/sites/default/files/docs/BART%20Metro%202030%20-%20Feb%202023%20Summary%20Report_Final_0.pdf))</Caption>
@@ -400,7 +381,7 @@ Given the lack of a plan, lack of funding, and lack of conviction at the present
 
 ### Caltrain to Downtown SF
 
- _ **Optimism level: mid**_
+ **Optimism level: mid**
 
 ![](/img/the-future-of-bay-area-transit/8b3ca8bb-e263-4feb-b586-da4a18fe86a8_1300x731.png)
 <Caption> Concepts of a plan for the downtown SF caltrain extension. Source: [SFCTA](https://www.sfcta.org/projects/portal)</Caption>
@@ -415,7 +396,7 @@ This is a project driven by sheer force of necessity, rather than practicality o
 
 ### BART to Silicon Valley
 
- _ **Optimism level: mid**_
+ **Optimism level: mid**
 
 ![](/img/the-future-of-bay-area-transit/2a6f4f4c-937e-4ea5-b8dc-aac048c8b146_2102x1596.png)
 <Caption> A future 6-line BART service envisioned by the [BART 2030 Report](https://www.bart.gov/sites/default/files/docs/BART%20Metro%202030%20-%20Feb%202023%20Summary%20Report_Final_0.pdf). Fun fact: the purple line has temporarily existed twice in BART's history as a SFO connector- once in 2003-2004, and again from 2019-2021!</Caption>
@@ -441,7 +422,7 @@ So as much as I'd love to see BART reach downtown San Jose and think it'd be a m
 
 ### Caltrain Grade Separations
 
- _ **Optimism level: high**_
+ **Optimism level: high**
 
 ![](/img/the-future-of-bay-area-transit/0645724f-8130-47d3-812c-90dfdb887bf2_1600x1200.png)
 <Caption> a rendering of a future Broadway grade separation. ([source](https://www.greencaltrain.com/2024/02/caltrain-corridor-grade-separation-updates-burlingame-mountain-view-palo-alto-rwc/))</Caption>
@@ -467,7 +448,7 @@ Given the very positive impacts from these relatively short, low-risk projects (
 
 ### The Central Subway continues
 
- _ **Optimism level: mid**_
+ **Optimism level: mid**
 
 You may be aware that the T line currently looks like this:
 
@@ -486,7 +467,7 @@ I'm personally rooting for this project to roll forwards. There's still a lot th
 
 ### California High Speed Rail
 
- _ **Optimism level: existential dread**_
+ **Optimism level: existential dread**
 
 sigh, I guess this post wouldn't be complete without CAHSR...
 
@@ -511,7 +492,7 @@ I will continue to watch this project, hopefully with growing excitement rather 
 
 ### Bay Area 2050
 
- _ **Optimism level: too early to tell**_
+ **Optimism level: too early to tell**
 
 Every good planning commission has a long-range plan; [this one is the Metropolitan Transportation Commission's attempt.](https://planbayarea.org/sites/default/files/documents/Plan_Bay_Area_2050_October_2021.pdf)
 
