--- a/src/pages/_index-content.mdx
+++ b/src/pages/_index-content.mdx
@@ -22,3 +22,6 @@ I write long-form musings about history, technology, and community on my <MDLink
 #### contact
 
 <ContactCard client:idle />
+
+
+Hello this is a new sentence
