--- a/src/pages/_index-content.mdx
+++ b/src/pages/_index-content.mdx
@@ -3,7 +3,7 @@ import { MDLink } from '../components/links.tsx';
 import ContactCard from '../components/contactCard.tsx';
 
 ## :house: welcome to my internet home!
-glad you're here :) hope you'll stick around for a bit (or check out my <MDLink href="https://garden.bencuan.me">digital garden</MDLink>!)
+glad you're here :) hope you'll stick around for a bit (or check out my <MDLink href="https://garden.bencuan.me">:seedling: digital garden</MDLink>!)
 
 #### a little about me:
 
