--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -15,7 +15,7 @@
 <a href="https://oliver.ni"><img src="/img/friends/oliver.png" /></a>
 <a href="https://nikhiljha.com"><img src="/img/friends/njha.png" /></a>
 <a href="https://www.ocf.berkeley.edu"><img src="/img/friends/ocf.png" /></a>
-<a href="https://tsh.sh"><img src="/img/friends/turtlenet.gif" /></a>
+<a href="https://bencuan.me/blog/turtlenet"><img src="/img/friends/turtlenet.gif" /></a>
 
 <br/><br/>
 
