--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -8,8 +8,8 @@ import ContactCard from '../../components/contactCard.tsx';
 import '../../sass/about.scss';
 
 ## currently
- - :art: ???
- - :turtle: building [turtlenet](https://tsh.sh)
+ - :butterfly: infra @ [reve](https://reve.com)
+ - :turtle: building [turtlenet](https://bencuan.me/blog/turtlenet)
  - :books: organizing [systemd.works](https://systemd.works)
  - :memo: [[/blog/foreword|writing...]]
 
