--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -467,7 +467,7 @@ This website is hosted on [Netlify](https://netlify.app) and is built with [Astr
 
 Stylesheets are in SCSS. All font-family, font-size, and color are specified as variables in [_fonts.scss](https://github.com/64bitpandas/bencuan.me/blob/v6/src/sass/_fonts.scss)and [_colors.scss](https://github.com/64bitpandas/bencuan.me/blob/v6/src/sass/_colors.scss)
 
-The opt-in visitor counters send API requests to my homebrewed backend (api.bencuan.me) hosted on [turtlenet](https://tsh.sh). It's written in Go and derived from the [Clap Button](https://getclaps.app/) source code. 
+The opt-in visitor counters send API requests to my homebrewed backend (api.bencuan.me) hosted on [turtlenet](https://bencuan.me/blog/turtlenet). It's written in Go and derived from the [Clap Button](https://getclaps.app/) source code. 
 
 You can view the source on GitHub [here](https://github.com/64bitpandas/bencuan.me) (or by clicking the version tag in the footer!).
 
