--- a/src/pages/_index-content.mdx
+++ b/src/pages/_index-content.mdx
@@ -8,7 +8,7 @@ glad you're here :) hope you'll stick around for a bit (or check out my <MDLink 
 #### a little about me:
 
 I'm currently a systems engineer building production- and research-ready infra at 
-<MDLink href="https://preview.reve.art">:last_quarter_moon: Reve</MDLink> <Pronunciation word="Reve" ipa="ʁɛv" audioFile="/audio/reve.mp3" client:load/>. We're dreaming up the future of creative tooling-- excited to say more about it soon!
+<MDLink href="https://reve.com">:butterfly: Reve</MDLink> <Pronunciation word="Reve" ipa="ʁɛv" audioFile="/audio/reve.mp3" client:load/>.
 
 Previously, I was a codepoint fellow at <MDLink href="https://shv.com/">:snowflake: Sutter Hill Ventures</MDLink>, made a few games (and composed their soundtracks!) with my friends at <MDLink href="https://hexcaliber.dev/games">:joystick: Hexcaliber Games</MDLink>,
 general-managered at the <MDLink href="https://ocf.io">:penguin: Open Computing Facility</MDLink>, and 
