--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -19,7 +19,7 @@
 
 <br/><br/>
 
-[Bill Mao](https://billmao.net) - 
+[Brooke Mao](https://brookemao.ca) - 
 [Joshua Bromley](https://joshnet.pages.dev) -
 [Trinity Chung](https://trinityjchung.com) -
 [Michael Lisano](https://michaellisano.com) -
