--- a/src/pages/_index-content.mdx
+++ b/src/pages/_index-content.mdx
@@ -3,16 +3,6 @@ import { MDLink } from '../components/links.tsx';
 import ContactCard from '../components/contactCard.tsx';
 
 ## :house: welcome to my internet home!
-glad you're here :) hope you'll stick around for a bit (or check out my <MDLink href="https://garden.bencuan.me">:seedling: digital garden</MDLink>!)
 
-#### a little about me:
-
-I'm currently a systems engineer building production- and research-ready infra at 
-<MDLink href="https://reve.com">:butterfly: Reve</MDLink> <Pronunciation word="Reve" ipa="ʁɛv" audioFile="/audio/reve.mp3" client:load/>.
-
-Previously, I was a codepoint fellow at <MDLink href="https://shv.com/">:snowflake: Sutter Hill Ventures</MDLink>, made a few games (and composed their soundtracks!) with my friends at <MDLink href="https://hexcaliber.dev/games">:joystick: Hexcaliber Games</MDLink>,
-general-managered at the <MDLink href="https://ocf.io">:penguin: Open Computing Facility</MDLink>, and 
-:bear: <MDLink href="https://cs186berkeley.net">taught</MDLink> <MDLink href="https://cs61a.org">a</MDLink> <MDLink href="https://decal.ocf.io">few</MDLink> <MDLink href="https://atdp.berkeley.edu">classes</MDLink> at UC Berkeley.
-
-I write long-form musings about history, technology, and community on my <MDLink href="https://bencuan.me/blog">blog</MDLink>. My <MDLink href="https://bencuan.me/blog/transit">latest post</MDLink> is about the history (and future) of Bay Area transit. You can also find life updates / rough drafts on <MDLink href="https://bencuan.substack.com">substack</MDLink>.
+this website is currently under construction and will be back soon!
 
