start implementing new styles

--- a/src/pages/_index-content.mdx
+++ b/src/pages/_index-content.mdx
@@ -1,5 +1,7 @@
 import { MDLink } from '../components/links.tsx';
 
-## :house: welcome to my internet home!
+During daylight hours, I build ML research infrastructure at <MDLink href="https://app.reve.com/about">Reve</MDLink>.
 
-this website is currently under construction and will be back soon!
+I like to write whenever I get the chance. Most of my thoughts eventually end up on this website (sometimes on my <MDLink href="https://bencuan.me/blog">blog</MDLink>;  more frequently in the <MDLink href="https://garden.bencuan.me">Garden</MDLink>). You can also subscribe to my <MDLink href="https://bencuan.substack.com">newsletter</MDLink> if you’d like.
+
+My <MDLink href="https://garden.bencuan.me/Contact-Me">inbox</MDLink> is always open! one of my favorite gifts to receive is an unexpected message from a friend or kind stranger.
