add phosphor icon link

--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -37,6 +37,6 @@ All fonts are designed by [Pangram Pangram](https://pangrampangram.com), and lic
 
 ## iconography
 
-<PhosphorLogo /> This website uses Phosphor Icons. 
+<PhosphorLogo /> This website uses [Phosphor Icons](https://phosphoricons.com/). 
 
 <img src="/img/kevin2.png" alt="Kevin the Dinosaur" style={{ display: 'inline', height: '1.5em', verticalAlign: 'middle', margin: '0', position: 'relative', top: '-3px' }} /> Kevin the Dinosaur was hand-drawn by myself using [Procreate](https://procreate.com/).
