fix some styles

--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -17,7 +17,7 @@ If you’d like more context, on why I rebuild my website every year, you may re
 
 This website uses a custom color palette designed as a distillation of the colors in my physical room space.
 
-| Color | Hex Code | Pantone |
+| color | hex | pantone |
 |-------|----------|---------|
 | <ColorDot color="#297638" name="Palm Tree Island" /> | `#297638` | Pantone 2465 C |
 | <ColorDot color="#7E9B76" name="Aspen Green" /> | `#7E9B76` | Pantone 17-0215 TCX |
