fix some formatting

--- a/src/content/blog/club-penguin-is-kil.mdx
+++ b/src/content/blog/club-penguin-is-kil.mdx
@@ -160,5 +160,7 @@ Maybe we can learn a thing or two from Club Penguin, and work towards a future w
 
   * A full archive of the Club Penguin Times: https://clubpenguin.fandom.com/wiki/Category:Club_Penguin_Times_issues
 
+## footnotes
+
 <FootnoteRef n="1" client:idle>As of writing, there are 44 Bloons games in total, and I have played most of them. You are now compelled by the Super Monkey Fan Club to watch [this 2 hour 46 minute long video](https://www.youtube.com/watch?v=pbvc8_RYKrw) about monkeys popping balloons.</FootnoteRef>
 <FootnoteRef n="2" client:idle>This is a fun anti-pattern to explore. Maybe the world needs more scalable, unreliable software.</FootnoteRef>
