--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -47,7 +47,7 @@ But when you replace the word _possible_ with _enjoyable,_ or _sensible,_ or _a 
 
 
 
-####  **What even** _ **is**_ **a neighborhood?**
+####  What even ***is*** a neighborhood?
 
 In some ways, the word “neighborhood” is synonymous with community: it’s a group of people who share a common identity and a sense of belonging. While the rough boundaries of neighborhoods are often defined by landmarks like highways, rivers, and hills, they’re primarily characterized by who lives there and what they do there.
 
@@ -88,7 +88,7 @@ If you didn’t join this time and think this kind of stuff is neat, [let me kno
 
 ![](/img/sfstreets/651e2fad-4a83-4a16-910b-a82007c6ee6b_4032x2268.heic)![](/img/sfstreets/26fed19e-39dd-454b-b731-3b700e49fd48_4032x2268.heic)
 
-bayshore station
+<Caption>bayshore station</Caption>
 
 The Bayshore Caltrain station is the worst station in the system.<Footnote n="3" client:idle /> One one side, warehouses; on the other, separated by a [6 million dollar pedestrian bridge](https://www.caltrain.com/projects/bayshore-station-overpass-rehabilitation-project), is an empty field.
 
@@ -102,7 +102,7 @@ only to be blocked by a chain-link fence.
 
 ![](/img/sfstreets/780d9f9b-4100-4634-8515-1f99d0b24360_4032x2268.heic)
 
-Gotta love bay area transit 🙃
+<Caption>Gotta love bay area transit 🙃</Caption>
 
 * * *
 
@@ -388,7 +388,7 @@ Even in a city known for its streetcars, the automobile craze of the 1950s could
 
 ![](/img/sfstreets/058ee23d-b30d-4207-8e8b-abb47c608745_1250x976.png)![](/img/sfstreets/9d286394-4894-4f37-a624-78112cdbad2f_1296x1048.png)
 
-The SF streetcar map, 1940s versus today. How far we've fallen...
+<Caption>The SF streetcar map, 1940s versus today. How far we've fallen...</Caption>
 
 Politicians (and, the automobile lobby) were hard at work replacing those streetcars with double-decker highways. From 1959 to 1991, the Embarcadero waterfront looked like this:
 
@@ -531,50 +531,35 @@ There are also a few landmarks that are fun to visit, but I couldn’t fit into 
 
 
 
- _ **Q: What was your favorite/least favorite part of the journey?**_
+  **Q: What was your favorite/least favorite part of the journey?**
 
 Favorite: either the morning vibes in Visitacion Valley, or the hike up from Glen Park. 
 
 Least favorite: the Bayshore Station empty field, and walking through Civic Center / Van Ness to get up to the bus stop
 
- _ **Q: How have your thoughts about SF changed after doing this?**_
+  **Q: How have your thoughts about SF changed after doing this?**
 
 Despite the huge amount of new area I explored, this project has made me realize just how much more of the city I have yet to experience and learn about. 
 
 Also, most of the city’s action happens in a very small portion of it; I’d estimate around 80% of SF by area is super safe, quiet, and extremely normal. It’s remarkable how quickly you can enter, and leave, the chaos of urban life just by walking over to the next neighborhood over.
 
- _ **Q: I’m a tourist / only have a few days in SF. Would you recommend doing something like this?**_
+  **Q: I’m a tourist / only have a few days in SF. Would you recommend doing something like this?**
 
 If you really like walking, then absolutely yes! I’ve done something like this in a handful of cities I was visiting for the first time, and had amazing experiences that I’d never get doing normal touristy things. One recent memory from my time in Prague, for example, was stumbling upon [this Red Bull skating competition](https://www.redbull.com/us-en/events/red-bull-steep-street-prague-2023#:~:text=One%20of%20the%20steepest%20streets,event%20in%20your%20summer%20diary!) on a random side street by sheer coincidence of being at the right place at the right time.
 
 If you’re not into walking, or have a bigger group, you’ll be better off just picking a few of the nicest neighborhoods and more deeply experiencing what they have to offer. My shortlist would include:
-
   * A waterfront stroll along any one of: the Embarcadero, Lands’ End/Ocean Beach, the Marina, Fort Mason
-
   * The touristy stuff around Pier 39
-
   * A shopping/food stop in Hayes Valley
-
   * The Castro
-
   * Chinatown and North Beach
-
   * Twin Peaks
-
-
-
-
- _ **Q: When are you doing this again?**_
-
-I’m planning on hosting another long urban exploration walk sometime mid-next year! It may or may not be in San Francisco. Subscribe to hear more about it and how to join :)
 
 * * *
 
-Thanks for reading! Hope to see y’all soon,
-
 <Endcard/>
 
-#### footnotes.
+#### footnotes
 
 <FootnoteRef n="1" client:idle>What does “culturally significant” mean? In this context, I think if one SF resident could say “I went to a neat restaurant in \<neighborhood\> yesterday!” to another SF resident, and both immediately understood the general vicinity of said restaurant, I’d like to include that neighborhood in the list.</FootnoteRef>
 
