--- a/src/content/blog/what-makes-humans-unique.mdx
+++ b/src/content/blog/what-makes-humans-unique.mdx
@@ -19,9 +19,7 @@ While also built atop logic and rationality, philosophy is neither objective nor
 There are a lot of philosophical questions that are impossible for current scientific methods to even scratch, like:
 
   * Why do we exist?
-
   * What is consciousness?
-
   * What is the meaning of life?
 
 
@@ -30,17 +28,12 @@ There are a lot of philosophical questions that are impossible for current scien
 As science grows ever more capable and nuanced, the line between philosophy and science starts to blur. We've unlocked pretty compelling answers to things we once thought were unsolvable:
 
   * Why are there seasons?
-
   * What are we (physically) made of?
-
   * Why do we remember some things, but forget other more important things?
-
-
-
 
 This brings us to one such question stuck in the middle of that blurry line:
 
- _ **What makes humans unique?**_
+### What makes humans unique?
 
 * * *
 
@@ -166,11 +159,8 @@ College classes often feel siloed, with each professor making a self-contained c
 I'd like to acknowledge the professors and courses that made this piece possible:
 
   * Philosophy 5: Science and Human Understanding, Shamik Dasgupta
-
   * Anthropology 1: Introduction to Biological Anthropology, Sabrina Agrawal
-
   * Psychology 140: Developmental Psychology, Jan Engelmann
-
   * Psychology 124: The Evolution of Human Behavior, Lucia Jacobs
 
 <Endcard/>
