--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -11,7 +11,7 @@ This website is built with [Astro](https://astro.build) and served via GitHub Pa
 
 For those of you who may enjoy additional commentary on colophons, feel free to visit [the Garden’s article on colophons](https://garden.bencuan.me/internet/colophons).
 
-If you’d like more context, on why I rebuild my website every year, you may read [this Garden post on the history of bencuan.me](https://garden.bencuan.me/about/The-History-of-bencuan.me).
+If you’d like more context, on why I rebuild my website every year, you may read [my post on the history of bencuan.me](https://garden.bencuan.me/about/The-history-of-bencuan.me).
 
 ## colors
 
